# fiddle-demo

./: .gitignore  README.md  pyproject.toml
src/: configs.py  main.py  models.py  runner.py
