[project]
name = "fiddle-demo"
version = "0.1.0"
description = ""
authors = [{ name = "Jesse Farebrother", email = "jessefarebro@gmail.com" }]
dependencies = [
    "fiddle>=0.2.11",
    "absl-py>=2.0.0",
    "flax>=0.7.5",
    "jax>=0.4.20",
    "etils[epath]>=1.5.2",
    "optax>=0.1.7",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.ruff]
line-length = 100
# Don't fix unused imports
unfixable = ["F401"]
# Ignore unused variables
ignore = ["F841"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
